--- a/MyFirstGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyFirstGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -232,7 +232,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/BP_LaunchPad
@@ -407,15 +407,25 @@ Actor.Actor=True
 StaticMeshActor.Surface Materials=True
 StaticMeshActor.Geometry=True
 StaticMeshActor.Surface Properties=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.HLOD=True
+SpotLight.Physics=True
+SpotLight.Networking=True
+SpotLight.WorldPartition=True
+SpotLight.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/UnrealEd.AnimationThumbnailSkeletalMeshActor;
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_13
 RecentlyPlaced=/Script/CinematicCamera.CameraRig_Rail;
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 RecentlyPlaced=/Script/Engine.VolumetricCloud;/Engine/Transient.ActorFactoryVolumetricCloud_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Tube.Shape_Tube;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
@@ -1536,4 +1546,7 @@ BlueprintGraph.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[WindowsEditor]
+SuppressMissingAdvancedRenderingRequirementsNotification=True
 
