--- a/MyFirstGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyFirstGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -417,15 +417,31 @@ SpotLight.Physics=True
 SpotLight.Networking=True
 SpotLight.WorldPartition=True
 SpotLight.Actor=True
+Actor.Rendering=True
+Actor.Physics=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.HLOD=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Replication=True
+TriggerBox.Networking=True
+TriggerBox.WorldPartition=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/UnrealEd.AnimationThumbnailSkeletalMeshActor;
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_13
 RecentlyPlaced=/Script/CinematicCamera.CameraRig_Rail;
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 RecentlyPlaced=/Script/Engine.VolumetricCloud;/Engine/Transient.ActorFactoryVolumetricCloud_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Tube.Shape_Tube;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
